--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capmeet",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "./out/main/index.js",
   "scripts": {
     "start": "electron-vite preview",
@@ -34,14 +34,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "electron-store": "^10.1.0",
     "electron-updater": "^6.6.2",
     "form-data": "^4.0.4",
     "lucide-react": "^0.536.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
-    "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
