--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "electron-vite build",
     "build": "electron-vite build",
     "build:win": "npm run build && electron-builder --win --config",
-    "build:mac": "npm run build && electron-builder --mac --universal",
+    "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
     "build:all": "npm run build && electron-builder -mwl",
     "dist": "electron-builder",
