--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prebuild": "electron-vite build",
     "build": "electron-vite build",
     "build:win": "npm run build && electron-builder --win --config",
-    "build:mac": "npm run build && electron-builder --mac",
+    "build:mac": "npm run build && electron-builder --mac --arm64",
+    "build:mac:arm64": "npm run build && electron-builder --mac --arm64",
     "build:linux": "npm run build && electron-builder --linux",
     "build:all": "npm run build && electron-builder -mwl",
     "dist": "electron-builder",
@@ -64,11 +65,6 @@
     "terser": "^5.43.1",
     "tw-animate-css": "^1.3.6",
     "vite": "^7.0.6"
-  },
-  "homepage": "https://capmeet.com",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SATHIYAPRIYAN7/capmeet.git"
   },
   "keywords": [
     "electron",
