--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
     "dev": "electron-vite dev",
     "prebuild": "electron-vite build",
     "build": "electron-vite build",
-    "build:win": "npm run build && electron-builder --win --config",
+    "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac --arm64",
     "build:mac:arm64": "npm run build && electron-builder --mac --arm64",
-    "build:linux": "npm run build && electron-builder --linux",
     "build:all": "npm run build && electron-builder -mwl",
     "dist": "electron-builder",
     "dist:win": "electron-builder --win",
-    "dist:mac": "electron-builder --mac",
-    "dist:linux": "electron-builder --linux",
+    "dist:mac": "electron-builder --mac --arm64",
     "dist:all": "electron-builder -mwl",
     "test": "echo \"No tests specified\" && exit 0",
     "lint": "echo \"No linting configured\" && exit 0",
