--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "prebuild": "electron-vite build",
     "build": "electron-vite build",
     "build:win": "npm run build && electron-builder --win",
-    "build:mac": "npm run build && electron-builder --mac --arm64",
+    "build:mac": "npm run build && electron-builder --mac --universal",
+    "build:mac:universal": "npm run build && electron-builder --mac --universal",
     "build:mac:arm64": "npm run build && electron-builder --mac --arm64",
+    "build:mac:x64": "npm run build && electron-builder --mac --x64", 
     "build:all": "npm run build && electron-builder -mwl",
     "dist": "electron-builder",
     "dist:win": "electron-builder --win",
-    "dist:mac": "electron-builder --mac --arm64",
+    "dist:mac": "electron-builder --mac --universal",
+    "dist:mac:universal": "electron-builder --mac --universal",
     "dist:all": "electron-builder -mwl",
     "test": "echo \"No tests specified\" && exit 0",
     "lint": "echo \"No linting configured\" && exit 0",
